@@ -8,7 +8,7 @@
 #
 ##
 """
-Various utilities for processing SIFTS UniProt and taxonomy correspondence data.
+Various utilities for processing SIFTS  correspondence data.
 
 """
 
@@ -17,7 +17,6 @@ __author__ = "John Westbrook"
 __email__ = "jwest@rcsb.rutgers.edu"
 __license__ = "Apache 2.0"
 
-import json
 import logging
 import os
 import unittest
@@ -37,24 +36,16 @@ class SiftsUtilsTests(unittest.TestCase):
         self.__dirPath = os.path.join(os.path.dirname(TOPDIR), 'rcsb', 'mock-data')
         self.__siftsSummaryPath = os.path.join(self.__dirPath, 'sifts-summary')
         #
-        self.__siftsMappingFile = os.path.join(HERE, 'test-output', 'uniprot_taxonomy_mapping.json')
+        self.__outMappingFile = os.path.join(HERE, 'test-output', 'sifts_consolidated_mapping.pic')
 
     def tearDown(self):
         pass
 
     def testReadSiftsSummary(self):
         su = SiftsUtils()
-        rD = su.getSummaryMapping(self.__siftsSummaryPath)
+        rD = su.getSummaryMapping(self.__siftsSummaryPath, self.__outMappingFile)
         #
         logger.info("Model match length %d" % len(rD))
-
-        self.__serializeJson(self.__siftsMappingFile, rD)
-        #
-        #
-
-    def __serializeJson(self, filePath, oD):
-        with open(filePath, "w") as outfile:
-            json.dump(oD, outfile, indent=0)
 
 
 def readSiftsInfo():
