@@ -5,8 +5,9 @@
 # -----------------
 #
 [tox]
-#envlist = flake8, py{37,36,27}-{linux,macos}, coverage-macos
-envlist = flake8, py{36}-{linux,macos}, coverage-macos
+#envlist = flake8, py{37}-{linux,macos}, coverage-macos
+envlist = flake8, py{37}-{linux,macos}
+
 
 #
 skip_missing_interpreters = True
@@ -23,7 +24,6 @@ platform=
 
 basepython =
     py27: python2.7
-    py36: python3.6
     py37: python3.7
 
 whitelist_externals = echo
@@ -31,7 +31,7 @@ whitelist_externals = echo
 recreate = True
 
 # The python Postgres driver requires some pre-existing context that is
-# avoiding in this test harness.
+# avoided in this test harness.
 #
 deps =
 
@@ -41,7 +41,7 @@ commands =
 
 
 [testenv:flake8]
-basepython = python3.6
+basepython = python3.7
 skip_install = true
 deps =
     flake8
@@ -55,7 +55,7 @@ commands =
 # PyLine is working but is not completely configured.
 #
 [testenv:pylint]
-basepython = python3.6
+basepython = python3.7
 skip_install = true
 deps =
     pyflakes
@@ -65,7 +65,7 @@ commands =
 #
 
 [testenv:coverage-macos]
-basepython = python3.6
+basepython = python3.7
 platform=macos: darwin
 #skip_install = true
 
