@@ -1,6 +1,7 @@
 # RCSB_UTILS_SEQ HISTORY
 
   11-Dec-2018  - V0.10 Created module supporting PDB - UniProt mapping using SIFTS
+  19-Mar-2019    V0.11 Incorporate UniProt feature extraction tools.
 
 
 
